src/app/containers/LendBorrowSovryn/assets/index.scss
.nav-item {
  text-transform: uppercase;
  // color: #656565;
  color: white;
  font-weight: 600;


  &:hover, &:active, &.active {
    color: #fec006;
    text-decoration: none;
  }
}

.header {
  margin-bottom: 5%;
}

.engage-wallet {
  // background: #242424;
  background: var(--background);
  color: var(--white);
  width: 125px;
  height: 58px;
  padding: 2px 20px;
  border-radius: 8px;
  font-weight: 600;
  border-right: 5px solid #fff;
  border-bottom: 5px solid #fff;
  border-left: 1px solid #fff;
  border-top: 1px solid #fff;

  &:hover, &:active, &:focus {
    // background: none !important;
    background: var(--white) !important;
    color: #fec006 !important;
    border-right: 5px solid #fec006;
    border-bottom: 5px solid #fec006;
    border-left: 1px solid #fec006;
    border-top: 1px solid #fec006;
  }
}

.help {
  color: #656565;
  font-weight: 600;
  font-size: 22px;
  width: 58px;
  height: 58px;
  border: 2px solid #656565;
  border-radius: 100%;
  background: none;

  &:hover, &:active, &:focus {
    background: none !important;
    border-color: #fec006 !important;
    color: #fec006 !important;
  }
}

.main-container {
  background-color: #242424;
  padding: 4vh 7vw;
  width: 100%;
  height: 100vh;
  overflow: auto;
  background-image: url("img/bg@3x.png");
  background-size: contain;
  background-repeat: no-repeat;
  background-position: 0 250%;
}
.currency-row-link {
  margin: 0;
  padding: 0;
}
.currency-container {
  border-color: var(--bg-primary);
  background: white;
  will-change: border-color, height;
  transition: border-color 0.3s, height 0.3s;
  &__active {
    // border-color: var(--white);
    border-color: #004e9c;
    // color: var(--white)!important;
    color: var(--blue)!important;
  }
  //
  //& h3 {
  //  font-size: 30px;
  //  font-weight: 600;
  //  text-transform: uppercase;
  //  margin: 0 0 0 18px;
  //  padding: 0;
  //}
}

.currency {
  display: flex;
  align-items: center;

  & p {
    font-size: 30px;
    font-weight: 600;
    text-transform: uppercase;
    margin: 0 0 0 0;
    padding: 0;
  }

  & > span {
    font-size: 14px;
  }

  & > div {
    width: max-content;
    justify-content: space-around;
    display: flex;
    flex-direction: column;

    &:first-child {
      margin-right: 15px;
    }
  }
}

.currency-title {
  & h3 {
    font-size: 30px;
    font-weight: 300;
  }

}

.icon-btn {
  background: none !important;

  &:hover, &:active, &:focus {
    //background: rgba(236, 236, 236, 0.23) !important;
    & .bp3-icon > svg:not([fill]) {
      fill: #fec006;
    }
  }
}

.nav-tabs {
  width: 99%;
}

.tabs__green {
  .nav-tabs, .nav-tabs .nav-item.show .nav-link {
    color: #88c6a3 !important;
  }

  .nav-item:hover, .nav-item:active {
    color: #88c6a3 !important;
  }

  .nav-link.active {
    color: #88c6a3 !important;
  }
}

.tabs {
  background: none !important;
  font-size: 22px;

  .nav-tabs, .nav-tabs .nav-item.show .nav-link {
    color: #f89b2b;
    background: #242424 !important;

    &:hover, &:active, &:focus {
      color: #495057;
      background: #242424 !important;
    }
  }

  .nav-item:hover, .nav-item:active {
    color: #f89b2b;
  }

  .nav-link.active {
    color: #f89b2b;
    background: #242424 !important;
    border-color: #dee2e6 #dee2e6 #dee2e6;
  }

  &:hover, &:active, &:focus {
    background: #242424 !important;

  }
}

.deposit-button-group {
  display: flex;
  flex-wrap: nowrap;
  justify-content: space-between;

  & button {
    width: 100%;
    font-weight: 700;
    font-size: 12px;
    border: 1px solid var(--background);
    background: var(--background);
    color: white;
    @media screen and (min-width: 900px) {
      font-size: 22px;
    }
  }

  & button.disabled {
    // background: #656565;
    background: var(--component-bg-inactive);
    // border: 1px solid #656565;
  }

}

.withdraw-content {
  background: var(--white);
  color: var(--black);
  border-radius: 8px;

  & h4 {
    color: var(--black);
    font-size: 18px;
  }
}

.nav-pills .nav-link.active, .nav-pills .show > .nav-link {
  background: none;
}

.deposit-button-group.nav-pills .nav-link {
  width: 50%;
}

.nav-pills a {
  color: #fff
}

.lending-history-container {
  width: 100%;
  display: flex;
  flex-direction: column;
  border-right: 5px solid #fff;
  border-bottom: 5px solid #fff;
  border-left: 1px solid #fff;
  border-top: 1px solid #fff;
  // background: #242424;
  background: var(--component-bg);
  border-radius: 8px;
  margin: 5% 0;
  justify-content: center;
  padding: 18px 40px;

  & .alert-position {
    position: fixed;
    bottom: 0;
    right: 10px;
  }

  .table {
    background: #242424;
    border: none;

    & thead th {
      border-bottom: 1px solid #797979;
    }

    & td {
      border: none;
      border-bottom: 1px solid #fff;
      font-size: 14px;
    }

    .cell__green {
      color: #4ecdc4;
    }

    .cell__red {
      color: #ec5b5b;
    }

    tr:nth-child(even) {
      background: #242424;
    }

    & .cell {
      & > th {
        font-weight: 300;
        text-transform: uppercase;
        font-size: 12px;
        color: #979797
      }
    }
  }

}

.lending-history {
  display: flex;
  justify-content: space-between;
  align-items: center;

  & img {
    cursor: pointer;
    background: var(--background);
    border-radius: 50%;
    padding: 0.2rem;
    width: 80%;
    height: auto;
  }

  & h3 {
    margin: 0;
    padding: 0;
    font-weight: 700;
  }
}

.empty-history {
  height: 50px;
  display: flex;
  justify-content: center;
  align-items: center;
}

.account-balance-container__green {
  & button {
    background: #88c6a3 !important;
  }
}

.account-balance-container {
  display: flex;
  width: 100%;
  justify-content: space-between;

  & .account-balance {
    & p {
      font-size: 14px;
      margin: 0;
      padding: 0;
      color: #979797;
      font-weight: bold;
    }
  }
}

.bp3-popover-borrow {
  padding: 20px;
  text-align: center;
  .bp3-numeric-input {
    margin: 10px 0;
  }
}

.btn {
  color: var(--blue);

  &:hover {
    color: var(--gold);
  }
}

